--- a/index.html
+++ b/index.html
@@ -10,8 +10,81 @@
 
 <body>
 
-    <h1>Testing</h1>
+    <div class="container">
+        <div class="box">
+            <h1>BMI Calculator</h1>
 
+            <!-- Input Age -->
+            <div class="input">
+                <label for="height">Age</label>
+                <input type="text" class="text-input" id="age" autocomplete="off" required>
+            </div>
+            <!-- End Input Age -->
+
+            <!-- Options Gender -->
+            <div class="gender">
+
+                <label class="container">
+                    <input type="radio" name="radio" id="m">
+                    <p class="text">Male</p>
+                    <span class="checkmark"></span>
+                </label>
+
+                <label class="container">
+                    <input type="radio" name="radio" id="f">
+                    <p class="text">Female</p>
+                    <span class="checkmark"></span>
+                </label>
+
+            </div>
+            <!-- End Option Gender -->
+
+            <!-- Input Height and Weight -->
+            <div class="containerHW">
+
+                <div class="inputHeight">
+                    <label for="height">Height(cm)</label>
+                    <input type="number" id="height" required>
+                </div>
+
+                <div class="inputWeight">
+                    <label for="weight">Weight(kg)</label>
+                    <input type="number" id="weight" required>
+                </div>
+
+            </div>
+            <!-- End Input Height and Weight -->
+
+            <!-- Button submit start function calculate() -->
+            <button class="calculate" id="submit" onclick="calculate();">Calculate BMI</button>
+            <!-- end Button submit -->
+        </div>
+
+        <!-- the result of the calculation -->
+        <div class="result">
+            <p>Your BMI is</p>
+            <div id="result">00.00</div>
+            <p class="comment"></p>
+        </div>
+        <!-- End Result the Calculate -->
+    </div>
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+        <!-- Modal Content -->
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p id="modalText"></p>
+        </div>
+        <!-- End Modal Content -->
+    </div>
+    <!-- End Modal Content -->
+
+    <footer>
+        <div class="footer"><a class="footer-text" target="_blank" href="https://github.com/Aditypraa">Aditya
+                Pratama</a>
+        </div>
+    </footer>
 
     <script src="js/script.js"></script>
 </body>
