Create Variabel in file script.js

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                 <!-- Options Gender -->
                 <div class="gender">
                     <label class="container">
-                        <input type="radio" name="radio" id="m">
+                        <input type="radio" name="radio" id="male">
                         <p class="text">Male</p>
                         <span class="checkmark"></span>
                     </label>
 
                     <label class="container">
-                        <input type="radio" name="radio" id="f">
+                        <input type="radio" name="radio" id="female">
                         <p class="text">Female</p>
                         <span class="checkmark"></span>
                     </label>
