add Social asside

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator BMI</title>
+    <title>Calculator BMI | Aditya P</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
     <div class="container">
         <div class="box">
-            <h1>BMI Calculator</h1>
+            <h1>Kalkulator Berat Badan</h1>
 
             <div class="content">
                 <!-- Input Age -->
@@ -43,12 +44,12 @@
             <!-- Input Height and Weight -->
             <div class="containerHW">
 
-                <div class="inputHeight">
+                <div class="inputHeight input">
                     <label for="height">Height(cm)</label>
                     <input type="number" id="height" required>
                 </div>
 
-                <div class="inputWeight">
+                <div class="inputWeight input">
                     <label for="weight">Weight(kg)</label>
                     <input type="number" id="weight" required>
                 </div>
@@ -68,12 +69,6 @@
             </div>
             <!-- End Result the Calculate -->
         </div>
-
-        <footer>
-            <div class="footer"><a class="footer-text" target="_blank" href="https://github.com/Aditypraa">Aditya
-                    Pratama</a>
-            </div>
-        </footer>
     </div>
 
 
@@ -89,7 +84,13 @@
     </div>
     <!-- End Modal Content -->
 
-
+    <aside class="social">
+        <a href="https://wa.me/+6281343143704"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://web.facebook.com/AdityaPratama.Aditypra/"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://twitter.com/Aditypraa?t=8omMwgaab9qEOISej-5_yw&s=09"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.instagram.com/aditypraa/"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.youtube.com/channel/UCmzJkDiH9AkIEpqN1ID-8LQ"><i class="fab fa-youtube"></i></a>
+    </aside>
 
     <script src="js/script.js"></script>
 </body>
