--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="container">
         <div class="box">
-            <h1>Kalkulator Berat Badan</h1>
+            <h1>Calculator BMI</h1>
 
             <div class="content">
                 <!-- Input Age -->
